Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationBigMinusWithBadCharacters-54Chomped.calc
a .0E-2%3 b 1.E-2%5 c 2.3E-3%1 d 34.5E-4%5 e 6.78E-7%3 f 99.99E-5%6 g 3E-9%3 h 76E-4%5